# linuxisobuilder

./: CMakeLists.txt  Makefile  README.md  main.cpp  main.gui.cpp
.github/workflows/: android.yml  arch.yml  archmain.yml  build-cli.yml  build.yml  debiansid.yml  move.yml  static.yml
Android/app/src/main/: AndroidMainifest.xml
Android/app/src/main/java/tech/krzys/linuxisobuilder/: MainActivity.kt
Android/app/src/main/res/layout/: activity_main.xml
app/: build.gradle.kts
app/src/main/: AndroidMainifest.xml
app/src/main/java/tech/krzys/linuxisobuilder/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
docs/: download.html  index.html  script.js  style.css
